--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "embla-carousel-react": "^8.1.6",
     "lucide-react": "^0.400.0",
     "next": "14.2.4",
+    "posthog-js": "^1.149.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
